Makefile: bring back native tactics to regressions

--- a/src/Makefile
+++ b/src/Makefile
@@ -260,7 +260,7 @@ hello:
 	+$(MAKE) -C ../examples/hello ocaml
 
 # Getting parallelism from this target
-uregressions: hello ulib tutorial uexamples interactive-test
+uregressions: hello ulib tutorial uexamples native_tactics interactive-test
 
 ulib:
 	+$(MAKE) -C ../ulib
