tactics: new `launch_process` primitive
Only works when `--unsafe_tactic_exec` is provided.

--- a/examples/tactics/Makefile
+++ b/examples/tactics/Makefile
@@ -23,7 +23,11 @@ all:	Apply.uver		\
 	Caller.uver		\
 	UnitTests.uver		\
 	MetaCoq.uver		\
+	launch			\
 	neg
+
+launch: Launch.fst
+	$(FSTAR) --unsafe_tactic_exec --verify_module Launch $^
 
 neg:
 	$(MAKE) -C neg
