extraction of (simple) memoization works

--- a/examples/dm4free/Makefile
+++ b/examples/dm4free/Makefile
@@ -42,4 +42,13 @@ NOEXTRACT=$(addprefix --no_extract , $(REALIZED_FILES))
 extract_erase: $(wildcard FStar.Erase.*.fst)
 	mkdir -p ml/extracted
 	$(FSTAR) --codegen OCaml --odir ml/extracted --extract_namespace FStar.DM4F --extract_namespace FStar.Erase $(NOEXTRACT) $^
+	$(SED) -i -e 's/let rec for_all_prop /type (_,_,_) for_all_prop = unit\n&/' ml/extracted/FStar_Erase_Test.ml
+
+OCAML_PATH=$(realpath $(FSTAR_HOME)/bin)
+
+ml/bin/dm4f.cma: extract_erase
+	OCAMLPATH=$(OCAML_PATH) ocamlbuild -build-dir ml/_build -use-ocamlfind -pkg fstarlib -I ml -I ml/extracted dm4f.cma
+	mkdir -p ml/bin
+	cp ml/_build/dm4f.cma ml/bin/
+	$(FIND) ml/_build -name "*.cmi" -exec cp {} ml/bin/ \;
 
