tactics: add Normalization test to regressions

--- a/examples/tactics/Makefile
+++ b/examples/tactics/Makefile
@@ -12,6 +12,7 @@ all:	Apply.uver		\
 	Cases.uver		\
 	Tutorial.uver		\
 	Syntax.uver		\
+	Normalization.uver	\
 	GRewrite.uver		\
 	UserTactics.uver	\
 	Logic.uver		\
