tactics: Restore F# compatibility after latest bootstrapping changes
Co-Authored-By: @victor-dumitrescu

--- a/src/tactics/tactics.fsproj
+++ b/src/tactics/tactics.fsproj
@@ -85,6 +85,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FStar.Tactics.Types.fs" />
+    <Compile Include="FStar.Tactics.Result.fs" />
     <Compile Include="FStar.Tactics.Basic.fs" />
     <Compile Include="FStar.Tactics.Embedding.fs" />
     <Compile Include="FStar.Tactics.Native.fs" />
