--- a/ulib/Makefile
+++ b/ulib/Makefile
@@ -37,6 +37,7 @@ fstartaclib.mgen: fstarlib.mgen
 ######################################################
 
 OCAMLPATH=$(realpath ../bin/)
+FSTAR_OCAMLBUILD_EXTRAS ?= -cflag -g
 OCAMLBUILD=cd ../ && OCAMLPATH="$(OCAMLPATH)" ocamlbuild $(FSTAR_OCAMLBUILD_EXTRAS) -use-ocamlfind
 
 FSTARLIB_OCAMLBUILD=$(OCAMLBUILD) -build-dir ulib/ml/_build \
