Snap + updated native tactics tests

--- a/examples/native_tactics/Makefile
+++ b/examples/native_tactics/Makefile
@@ -14,16 +14,16 @@ MODULES=Print Split Canon
 
 all: $(patsubst %,%.cmxs,$(MODULES)) $(patsubst %,%.test,$(MODULES))
 
-.ulib: ../../bin/fstarlib/fstarlib.cmxa
+.fstar-tactics-lib: fstartaclib.cmxs
 	touch $@
 
-../../bin/fstarlib/fstarlib.cmxa:
-	$(MAKE) -C $(ULIB_ML)
+fstartaclib.cmxs:
+	$(MAKE) -C $(FSTAR_HOME)/ulib install-fstar-tactics
 
 $(CACHE):
 	mkdir $@
 
-%.cmxs: %.Test.fst .ulib $(CACHE)
+%.cmxs: %.Test.fst .fstar-tactics-lib $(CACHE)
 	$(FSTAR) $(OTHERFLAGS) --gen_native_tactics $(CACHE) $<
 
 %.test: %.Test.fst %.cmxs
