trying out ulib in the two phase type checker ***NO_CI***

--- a/ulib/Makefile.verify
+++ b/ulib/Makefile.verify
@@ -16,7 +16,7 @@ extra: $(addsuffix -ver, $(EXTRA))
 indent: $(addsuffix -indent, $(ALL))
 
 %-ver: %
-	$(FSTAR) $^
+	$(FSTAR) --debug $(basename $^) --debug_level 2-Phase-Checking $^
 	touch $@
 
 %.fst-in:
