regen hints; bump rlimit by default in Makefile; but also added two --lax in EnumParsing.fst. Heads up @tchajed (with Jared and Jonathan)

--- a/examples/kv_parsing/Makefile
+++ b/examples/kv_parsing/Makefile
@@ -26,7 +26,7 @@ EXTRACT_FILES := IntegerParsing.fst \
 
 FSTAR_INCLUDE_PATHS:=--include $(KREMLIN_HOME)/kremlib
 
-OTHERFLAGS+=$(FSTAR_INCLUDE_PATHS)
+OTHERFLAGS+=$(FSTAR_INCLUDE_PATHS) --z3rlimit_factor 4
 
 all: $(FST_FILES:.fst=.uver)
 
